@@ -413,6 +413,7 @@ label(ADDRESS_IP_DATAGRAM)dit(bf(tt(IP-DATAGRAM:<address>:<protocol>)))
    link(ip-add-membership)(OPTION_IP_ADD_MEMBERSHIP),
    link(ip-add-source-membership)(OPTION_IP_ADD_SOURCE_MEMBERSHIP),
    link(ipv6-join-group)(OPTION_IPV6_JOIN_GROUP),
+   link(ipv6-join-source-group)(OPTION_IPV6_JOIN_SOURCE_GROUP),
    link(ttl)(OPTION_TTL),
    link(tos)(OPTION_TOS),
    link(pf)(OPTION_PROTOCOL_FAMILY)nl()
@@ -1129,6 +1130,7 @@ label(ADDRESS_UDP_DATAGRAM)dit(bf(tt(UDP-DATAGRAM:<address>:<port>)))
    link(ip-add-membership)(OPTION_IP_ADD_MEMBERSHIP),
    link(ip-add-source-membership)(OPTION_IP_ADD_SOURCE_MEMBERSHIP),
    link(ipv6-join-group)(OPTION_IPV6_JOIN_GROUP),
+   link(ipv6-join-source-group)(OPTION_IPV6_JOIN_SOURCE_GROUP),
    link(ttl)(OPTION_TTL),
    link(tos)(OPTION_TOS),
    link(sourceport)(OPTION_SOURCEPORT),
@@ -2172,9 +2174,13 @@ dit(bf(tt(ip-add-membership=<multicast-address:interface-address:interface-index
    procan().
 label(OPTION_IP_ADD_SOURCE_MEMBERSHIP)
 dit(bf(tt(ip-add-source-membership=<multicast-address:interface-address:source-address>)))
-   Makes the socket member of the specified multicast group for the specified
-   source, i.e. only multicast traffic from this address is to be delivered.
-   This is currently only implemented for IPv4.nl()
+   Makes the socket member of the specified multicast group for the
+   specified source, i.e. only multicast traffic from this address is to be
+   delivered. This only works for IPv4, see
+   link(ipv6-join-source-group)(OPTION_IPV6_JOIN_SOURCE_GROUP) for the IPv6
+   variant. The option takes the IP address of the multicast group, the IP
+   address of the desired network interface and the source IP address of the
+   multicast traffic.
 label(OPTION_IPV6_JOIN_GROUP)
 dit(bf(tt(ipv6-join-group=<multicast-address:interface-name>)))
 dit(bf(tt(ipv6-join-group=<multicast-address:interface-index>)))
@@ -2184,6 +2190,17 @@ dit(bf(tt(ipv6-join-group=<multicast-address:interface-index>)))
    group and info about the desired network interface.
    The indices of active network interfaces can be shown using the utility
    procan().
+label(OPTION_IPV6_JOIN_SOURCE_GROUP)
+dit(bf(tt(ipv6-join-source-group=<multicast-address:interface-name:source-address>)))
+dit(bf(tt(ipv6-join-source-group=<multicast-address:interface-index:source-address>)))
+   Makes the socket member of the specified multicast group for the
+   specified source, i.e. only multicast traffic from this address is to be
+   delivered. This only works for IPv6, see
+   link(ip-add-source-membership)(OPTION_IP_ADD_SOURCE_MEMBERSHIP) for the
+   IPv4 variant. The option takes the IP address of the multicast group,
+   info about the desired network interface and the source IP address of the
+   multicast traffic. The indices of active network interfaces can be shown
+   using the utility procan().
 label(OPTION_IP_MULTICAST_IF)
 dit(bf(tt(ip-multicast-if=<hostname>)))
    Specifies hostname or address of the network interface to be used for
