@@ -13,6 +13,7 @@
 
 extern const struct optdesc opt_ipv6_v6only;
 extern const struct optdesc opt_ipv6_join_group;
+extern const struct optdesc opt_ipv6_join_source_group;
 extern const struct optdesc opt_ipv6_pktinfo;
 extern const struct optdesc opt_ipv6_recvpktinfo;
 extern const struct optdesc opt_ipv6_rthdr;
@@ -49,6 +50,9 @@ xiosetsockaddrenv_ip6(int idx, char *namebuff, size_t namelen,
 		      char *valuebuff, size_t valuelen,
 		      struct sockaddr_in6 *sa, int ipproto);
 extern int xioapply_ipv6_join_group(xiosingle_t *xfd, struct opt *opt);
+
+extern int xiotype_ip6_join_source_group(char* token, const struct optname *ent, struct opt *opt);
+extern int xioapply_ip6_join_source_group(struct single *xfd, struct opt *opt);
 
 #endif /* WITH_IP6 */
 
